--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -67,3 +67,11 @@ swiftmailer:
     username: '%mailer_user%'
     password: '%mailer_password%'
     spool: { type: memory }
+
+fos_user:
+    db_driver:       orm
+    firewall_name:   main
+    user_class:      A2\UserBundle\Entity\User
+    from_email:
+        address:     "hadjimohamedallam@gmail.com"
+        sender_name: "Allam"
