--- a/app/config/security.yml
+++ b/app/config/security.yml
@@ -2,10 +2,21 @@
 # https://symfony.com/doc/current/security.html
 security:
 
+    encoders:
+        A2\UserBundle\Entity\User: sha512
+
+    role_hierarchy:
+        # Un manager hérite des droits d'utilisateur de base
+        ROLE_MANAGER:      ROLE_USER
+        # Un admin a aussi les droits manager et plus
+        ROLE_ADMIN:        ROLE_MANAGER
+        # Puis le role superadmin
+        ROLE_SUPER_ADMIN: [ROLE_ADMIN, ROLE_ALLOWED_TO_SWITCH]
+
     # https://symfony.com/doc/current/security.html#b-configuring-how-users-are-loaded
     providers:
-        in_memory:
-            memory: ~
+        main:
+            id: fos_user.user_provider.username
 
     firewalls:
         # disables authentication for assets and the profiler, adapt it according to your needs
@@ -14,11 +25,18 @@ security:
             security: false
 
         main:
-            anonymous: ~
-            # activate different ways to authenticate
+            pattern:        ^/
+            anonymous:      true
+            provider:       main
+            form_login:
+                login_path: fos_user_security_login
+                check_path: fos_user_security_check
+            logout:
+                path:       fos_user_security_logout
+                target:     fos_user_security_login
+            remember_me:
+                secret:     %secret%
 
-            # https://symfony.com/doc/current/security.html#a-configuring-how-your-users-will-authenticate
-            #http_basic: ~
-
-            # https://symfony.com/doc/current/security/form_login_setup.html
-            #form_login: ~
+    access_control:
+        #- { path: ^/login, roles: IS_AUTHENTICATED_ANONYMOUSLY, ip: 127.0.0.1, requires_channel: https }
+        - { path: ^/admin, roles: ROLE_ADMIN }
