--- a/app/config/routing.yml
+++ b/app/config/routing.yml
@@ -1,6 +1,10 @@
+core:
+    resource: "@CoreBundle/Resources/config/routing.yml"
+    prefix:   /
+
 a2_user:
     resource: "@A2UserBundle/Resources/config/routing.yml"
-    prefix:   /
+    #prefix:   /
 
 fos_user:
     resource: "@FOSUserBundle/Resources/config/routing/all.xml"
