--- a/composer.json
+++ b/composer.json
@@ -4,6 +4,7 @@
     "type": "project",
     "autoload": {
         "psr-4": {
+            "CoreBundle\\": "src/CoreBundle",
             "A2\\UserBundle\\": "src/A2/UserBundle"
         },
         "classmap": [
