--- a/app/config/routing.yml
+++ b/app/config/routing.yml
@@ -2,9 +2,13 @@
     #resource: "@CoreBundle/Resources/config/routing.yml"
     #prefix:   /
 
+a2_address:
+    resource: "@A2AddressBundle/Resources/config/routing.yml"
+    prefix:   /
+
 a2_user:
     resource: "@A2UserBundle/Resources/config/routing.yml"
-    #prefix:   /
+    prefix:   /
 
 fos_user:
     resource: "@FOSUserBundle/Resources/config/routing/all.xml"
