--- a/composer.json
+++ b/composer.json
@@ -6,7 +6,8 @@
         "psr-4": {
             "CoreBundle\\": "src/CoreBundle",
             "A2\\UserBundle\\": "src/A2/UserBundle",
-            "A2\\AddressBundle\\": "src/A2/AddressBundle"
+            "A2\\AddressBundle\\": "src/A2/AddressBundle",
+            "A2\\StorehouseBundle\\": "src/A2/StorehouseBundle"
         },
         "classmap": [
             "app/AppKernel.php",
