--- a/app/config/routing.yml
+++ b/app/config/routing.yml
@@ -1,3 +1,7 @@
+a2_category:
+    resource: "@A2CategoryBundle/Resources/config/routing.yml"
+    prefix:   /
+
 a2_storehouse:
     resource: "@A2StorehouseBundle/Resources/config/routing.yml"
     prefix:   /
