--- a/composer.json
+++ b/composer.json
@@ -7,7 +7,8 @@
             "CoreBundle\\": "src/CoreBundle",
             "A2\\UserBundle\\": "src/A2/UserBundle",
             "A2\\AddressBundle\\": "src/A2/AddressBundle",
-            "A2\\StorehouseBundle\\": "src/A2/StorehouseBundle"
+            "A2\\StorehouseBundle\\": "src/A2/StorehouseBundle",
+            "A2\\CategoryBundle\\": "src/A2/CategoryBundle"
         },
         "classmap": [
             "app/AppKernel.php",
