--- a/composer.json
+++ b/composer.json
@@ -10,7 +10,8 @@
             "A2\\StorehouseBundle\\": "src/A2/StorehouseBundle",
             "A2\\CategoryBundle\\": "src/A2/CategoryBundle",
             "A2\\BrandBundle\\": "src/A2/BrandBundle",
-            "A2\\ModelBundle\\": "src/A2/ModelBundle"
+            "A2\\ModelBundle\\": "src/A2/ModelBundle",
+            "A2\\CarBundle\\": "src/A2/CarBundle"
         },
         "classmap": [
             "app/AppKernel.php",
