--- a/app/config/routing.yml
+++ b/app/config/routing.yml
@@ -1,3 +1,7 @@
+a2_currency:
+    resource: "@A2CurrencyBundle/Resources/config/routing.yml"
+    prefix:   /
+
 a2_image:
     resource: "@A2ImageBundle/Resources/config/routing.yml"
     prefix:   /
