--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,8 @@
             "A2\\BrandBundle\\": "src/A2/BrandBundle",
             "A2\\ModelBundle\\": "src/A2/ModelBundle",
             "A2\\CarBundle\\": "src/A2/CarBundle",
-            "A2\\ImageBundle\\": "src/A2/ImageBundle"
+            "A2\\ImageBundle\\": "src/A2/ImageBundle",
+            "A2\\CurrencyBundle\\": "src/A2/CurrencyBundle"
         },
         "classmap": [
             "app/AppKernel.php",
