--- a/composer.json
+++ b/composer.json
@@ -13,7 +13,8 @@
             "A2\\ModelBundle\\": "src/A2/ModelBundle",
             "A2\\CarBundle\\": "src/A2/CarBundle",
             "A2\\ImageBundle\\": "src/A2/ImageBundle",
-            "A2\\CurrencyBundle\\": "src/A2/CurrencyBundle"
+            "A2\\CurrencyBundle\\": "src/A2/CurrencyBundle",
+            "A2\\CustomerBundle\\": "src/A2/CustomerBundle"
         },
         "classmap": [
             "app/AppKernel.php",
