--- a/composer.json
+++ b/composer.json
@@ -14,7 +14,8 @@
             "A2\\CarBundle\\": "src/A2/CarBundle",
             "A2\\ImageBundle\\": "src/A2/ImageBundle",
             "A2\\CurrencyBundle\\": "src/A2/CurrencyBundle",
-            "A2\\CustomerBundle\\": "src/A2/CustomerBundle"
+            "A2\\CustomerBundle\\": "src/A2/CustomerBundle",
+            "A2\\SupplierBundle\\": "src/A2/SupplierBundle"
         },
         "classmap": [
             "app/AppKernel.php",
