--- a/app/config/routing.yml
+++ b/app/config/routing.yml
@@ -1,3 +1,7 @@
+a2_order:
+    resource: "@A2OrderBundle/Resources/config/routing.yml"
+    prefix:   /
+
 a2_supplier:
     resource: "@A2SupplierBundle/Resources/config/routing.yml"
     prefix:   /
