--- a/composer.json
+++ b/composer.json
@@ -15,7 +15,8 @@
             "A2\\ImageBundle\\": "src/A2/ImageBundle",
             "A2\\CurrencyBundle\\": "src/A2/CurrencyBundle",
             "A2\\CustomerBundle\\": "src/A2/CustomerBundle",
-            "A2\\SupplierBundle\\": "src/A2/SupplierBundle"
+            "A2\\SupplierBundle\\": "src/A2/SupplierBundle",
+            "A2\\OrderBundle\\": "src/A2/OrderBundle"
         },
         "classmap": [
             "app/AppKernel.php",
