--- a/app/config/routing.yml
+++ b/app/config/routing.yml
@@ -1,3 +1,7 @@
+a2_stock:
+    resource: "@A2StockBundle/Resources/config/routing.yml"
+    prefix:   /
+
 a2_order:
     resource: "@A2OrderBundle/Resources/config/routing.yml"
     prefix:   /
