--- a/app/config/routing.yml
+++ b/app/config/routing.yml
@@ -1,3 +1,7 @@
+a2_sale:
+    resource: "@A2SaleBundle/Resources/config/routing.yml"
+    prefix:   /
+
 a2_stock:
     resource: "@A2StockBundle/Resources/config/routing.yml"
     prefix:   /
