--- a/composer.json
+++ b/composer.json
@@ -17,7 +17,8 @@
             "A2\\CustomerBundle\\": "src/A2/CustomerBundle",
             "A2\\SupplierBundle\\": "src/A2/SupplierBundle",
             "A2\\OrderBundle\\": "src/A2/OrderBundle",
-            "A2\\StockBundle\\": "src/A2/StockBundle"
+            "A2\\StockBundle\\": "src/A2/StockBundle",
+            "A2\\SaleBundle\\": "src/A2/SaleBundle"
         },
         "classmap": [
             "app/AppKernel.php",
