--- a/app/config/security.yml
+++ b/app/config/security.yml
@@ -28,22 +28,19 @@ security:
             pattern:   ^/login$
             anonymous: true
 
-        main_register:
-            pattern:   ^/register/$
-            anonymous: true
-
         main:
-            pattern:        ^/
-            anonymous:      false
-            provider:       main
+            pattern:                 ^/
+            anonymous:               false
+            provider:                main
             form_login:
-                login_path: fos_user_security_login
-                check_path: fos_user_security_check
+                login_path:          fos_user_security_login
+                check_path:          fos_user_security_check
+                default_target_path: core_homepage
             logout:
-                path:       fos_user_security_logout
-                target:     fos_user_security_login
+                path:                fos_user_security_logout
+                target:              fos_user_security_login
             remember_me:
-                secret:     %secret%
+                secret:              %secret%
 
     access_control:
         #- { path: ^/login, roles: IS_AUTHENTICATED_ANONYMOUSLY, ip: 127.0.0.1, requires_channel: https }
