--- a/src/A2/CategoryBundle/Resources/config/routing.yml
+++ b/src/A2/CategoryBundle/Resources/config/routing.yml
@@ -1,3 +1,35 @@
-a2_category_homepage:
-    path:     /
-    defaults: { _controller: A2CategoryBundle:Default:index }
+a2_category_index:
+    path:            /
+    defaults:
+        _controller: A2CategoryBundle:Category:index
+    methods:         GET
+
+a2_category_show:
+    path:            /{id}/show
+    defaults:
+        _controller: A2CategoryBundle:Category:show
+    requirements:
+        id:          \d+
+    methods:         GET
+
+a2_category_new:
+    path:            /new
+    defaults:
+        _controller: A2CategoryBundle:Category:new
+    methods:         [GET, POST]
+
+a2_category_edit:
+    path:            /{id}/edit
+    defaults:
+        _controller: A2CategoryBundle:Category:edit
+    requirements:
+        id:          \d+
+    methods:         [GET, POST]
+
+a2_category_delete:
+    path:            /{id}/delete
+    defaults:
+        _controller: A2CategoryBundle:Category:delete
+    requirements:
+        id:          \d+
+    methods:         DELETE
