--- a/src/A2/ModelBundle/Resources/config/routing.yml
+++ b/src/A2/ModelBundle/Resources/config/routing.yml
@@ -1,3 +1,35 @@
-a2_model_homepage:
-    path:     /
-    defaults: { _controller: A2ModelBundle:Default:index }
+a2_model_index:
+    path:            /
+    defaults:
+        _controller: A2ModelBundle:Model:index
+    methods:         GET
+
+a2_model_show:
+    path:            /{id}/show
+    defaults:
+        _controller: A2ModelBundle:Model:show
+    requirements:
+        id:          \d+
+    methods:         GET
+
+a2_model_new:
+    path:            /new
+    defaults:
+        _controller: A2ModelBundle:Model:new
+    methods:         [GET, POST]
+
+a2_model_edit:
+    path:            /{id}/edit
+    defaults:
+        _controller: A2ModelBundle:Model:edit
+    requirements:
+        id:          \d+
+    methods:         [GET, POST]
+
+a2_model_delete:
+    path:            /{id}/delete
+    defaults:
+        _controller: A2ModelBundle:Model:delete
+    requirements:
+        id:          \d+
+    methods:         DELETE
