--- a/src/A2/CarBundle/Resources/config/routing.yml
+++ b/src/A2/CarBundle/Resources/config/routing.yml
@@ -1,3 +1,35 @@
-a2_car_homepage:
-    path:     /
-    defaults: { _controller: A2CarBundle:Default:index }
+a2_car_index:
+    path:            /
+    defaults:
+        _controller: A2CarBundle:Car:index
+    methods:         GET
+
+a2_car_show:
+    path:            /{id}/show
+    defaults:
+        _controller: A2CarBundle:Car:show
+    requirements:
+        id:          \d+
+    methods:         GET
+
+a2_car_new:
+    path:            /new
+    defaults:
+        _controller: A2CarBundle:Car:new
+    methods:         [GET, POST]
+
+a2_car_edit:
+    path:            /{id}/edit
+    defaults:
+        _controller: A2CarBundle:Car:edit
+    requirements:
+        id:          \d+
+    methods:         [GET, POST]
+
+a2_car_delete:
+    path:            /{id}/delete
+    defaults:
+        _controller: A2CarBundle:Car:delete
+    requirements:
+        id:          \d+
+    methods:         DELETE
