--- a/src/A2/CustomerBundle/Resources/config/routing.yml
+++ b/src/A2/CustomerBundle/Resources/config/routing.yml
@@ -1,3 +1,35 @@
-a2_customer_homepage:
-    path:     /
-    defaults: { _controller: A2CustomerBundle:Default:index }
+a2_customer_index:
+    path:            /
+    defaults:
+        _controller: A2CustomerBundle:Customer:index
+    methods:         GET
+
+a2_customer_show:
+    path:            /{id}/show
+    defaults:
+        _controller: A2CustomerBundle:Customer:show
+    requirements:
+        id:          \d+
+    methods:         GET
+
+a2_customer_new:
+    path:            /new
+    defaults:
+        _controller: A2CustomerBundle:Customer:new
+    methods:         [GET, POST]
+
+a2_customer_edit:
+    path:            /{id}/edit
+    defaults:
+        _controller: A2CustomerBundle:Customer:edit
+    requirements:
+        id:          \d+
+    methods:         [GET, POST]
+
+a2_customer_delete:
+    path:            /{id}/delete
+    defaults:
+        _controller: A2CustomerBundle:Customer:delete
+    requirements:
+        id:          \d+
+    methods:         DELETE
