--- a/src/A2/OrderBundle/Resources/config/routing.yml
+++ b/src/A2/OrderBundle/Resources/config/routing.yml
@@ -1,3 +1,35 @@
-a2_order_homepage:
-    path:     /
-    defaults: { _controller: A2OrderBundle:Default:index }
+a2_orders_index:
+    path:            /
+    defaults:
+        _controller: A2OrderBundle:Orders:index
+    methods:         GET
+
+a2_orders_show:
+    path:            /{id}/show
+    defaults:
+        _controller: A2OrderBundle:Orders:show
+    requirements:
+        id:          \d+
+    methods:         GET
+
+a2_orders_new:
+    path:            /new
+    defaults:
+        _controller: A2OrderBundle:Orders:new
+    methods:         [GET, POST]
+
+a2_orders_edit:
+    path:            /{id}/edit
+    defaults:
+        _controller: A2OrderBundle:Orders:edit
+    requirements:
+        id:          \d+
+    methods:         [GET, POST]
+
+a2_orders_delete:
+    path:            /{id}/delete
+    defaults:
+        _controller: A2OrderBundle:Orders:delete
+    requirements:
+        id:          \d+
+    methods:         DELETE
