--- a/src/A2/SaleBundle/Resources/config/routing.yml
+++ b/src/A2/SaleBundle/Resources/config/routing.yml
@@ -1,3 +1,35 @@
-a2_sale_homepage:
-    path:     /
-    defaults: { _controller: A2SaleBundle:Default:index }
+a2_sale_index:
+    path:            /
+    defaults:
+        _controller: A2SaleBundle:Sale:index
+    methods:         GET
+
+a2_sale_show:
+    path:            /{id}/show
+    defaults:
+        _controller: A2SaleBundle:Sale:show
+    requirements:
+        id:          \d+
+    methods:         GET
+
+a2_sale_new:
+    path:            /new
+    defaults:
+        _controller: A2SaleBundle:Sale:new
+    methods:         [GET, POST]
+
+a2_sale_edit:
+    path:            /{id}/edit
+    defaults:
+        _controller: A2SaleBundle:Sale:edit
+    requirements:
+        id:          \d+
+    methods:         [GET, POST]
+
+a2_sale_delete:
+    path:            /{id}/delete
+    defaults:
+        _controller: A2SaleBundle:Sale:delete
+    requirements:
+        id:          \d+
+    methods:         DELETE
