--- a/src/A2/StorehouseBundle/Resources/config/routing.yml
+++ b/src/A2/StorehouseBundle/Resources/config/routing.yml
@@ -1,3 +1,35 @@
-a2_storehouse_homepage:
-    path:     /
-    defaults: { _controller: A2StorehouseBundle:Default:index }
+a2_storehouse_index:
+    path:            /
+    defaults:
+        _controller: A2StorhouseBundle:Storehouse:index
+    methods:         GET
+
+a2_storehouse_show:
+    path:            /{id}/show
+    defaults:
+        _controller: A2StorhouseBundle:Storehouse:show
+    requirements:
+        id:          \d+
+    methods:         GET
+
+a2_storehouse_new:
+    path:            /new
+    defaults:
+        _controller: A2StorhouseBundle:Storehouse:new
+    methods:         [GET, POST]
+
+a2_storehouse_edit:
+    path:            /{id}/edit
+    defaults:
+        _controller: A2StorhouseBundle:Storehouse:edit
+    requirements:
+        id:          \d+
+    methods:         [GET, POST]
+
+a2_storehouse_delete:
+    path:            /{id}/delete
+    defaults:
+        _controller: A2StorhouseBundle:Storehouse:delete
+    requirements:
+        id:          \d+
+    methods:         DELETE
