--- a/src/A2/SupplierBundle/Resources/config/routing.yml
+++ b/src/A2/SupplierBundle/Resources/config/routing.yml
@@ -1,3 +1,35 @@
-a2_supplier_homepage:
-    path:     /
-    defaults: { _controller: A2SupplierBundle:Default:index }
+a2_supplier_index:
+    path:            /
+    defaults:
+        _controller: A2SupplierBundle;Supplier:index
+    methods:         GET
+
+a2_upplier_show:
+    path:            /{id}/show
+    defaults:
+        _controller: A2SupplierBundle;Supplier:show
+    requirements:
+        id:          \d+
+    methods:         GET
+
+a2_supplier_new:
+    path:            /new
+    defaults:
+        _controller: A2SupplierBundle;Supplier:new
+    methods:         [GET, POST]
+
+a2_supplier_edit:
+    path:            /{id}/edit
+    defaults:
+        _controller: A2SupplierBundle;Supplier:edit
+    requirements:
+        id:          \d+
+    methods:         [GET, POST]
+
+a2_supplier_delete:
+    path:            /{id}/delete
+    defaults:
+        _controller: A2SupplierBundle;Supplier:delete
+    requirements:
+        id:          \d+
+    methods:         DELETE
