Modification de la route a2_category_delete pour la prise en compte de methode POST

--- a/src/A2/CategoryBundle/Resources/config/routing.yml
+++ b/src/A2/CategoryBundle/Resources/config/routing.yml
@@ -32,4 +32,4 @@ a2_category_delete:
         _controller: A2CategoryBundle:Category:delete
     requirements:
         id:          \d+
-    methods:         DELETE
+    methods:         [GET, POST]
