Ajout de la prise de methode POST a a2_category_index pour prendre en compte la recherche

--- a/src/A2/CategoryBundle/Resources/config/routing.yml
+++ b/src/A2/CategoryBundle/Resources/config/routing.yml
@@ -2,7 +2,7 @@ a2_category_index:
     path:            /
     defaults:
         _controller: A2CategoryBundle:Category:index
-    methods:         GET
+    methods:         [GET, POST]
 
 a2_category_show:
     path:            /{id}/show
