Ajout de la pec POST pour received car changement d'idee

--- a/src/A2/OrderBundle/Resources/config/routing.yml
+++ b/src/A2/OrderBundle/Resources/config/routing.yml
@@ -40,4 +40,4 @@ a2_orders_received:
         _controller: A2OrderBundle:Orders:received
     requirements:
         id:          \d+
-    methods:         POST
+    methods:         [GET, POST]
