--- a/src/A2/CurrencyBundle/Resources/config/routing.yml
+++ b/src/A2/CurrencyBundle/Resources/config/routing.yml
@@ -2,7 +2,7 @@ a2_currency_index:
     path:            /
     defaults:
         _controller: A2CurrencyBundle:Currency:index
-    methods:         GET
+    methods:         [GET, POST]
 
 a2_currency_show:
     path:            /{id}/show
@@ -32,4 +32,4 @@ a2_currency_delete:
         _controller: A2CurrencyBundle:Currency:delete
     requirements:
         id:          \d+
-    methods:         DELETE
+    methods:         [GET, POST]
