Modification de la feuille de route de Storehouse pour la pec de GET POST dans index et delete

--- a/src/A2/StorehouseBundle/Resources/config/routing.yml
+++ b/src/A2/StorehouseBundle/Resources/config/routing.yml
@@ -2,7 +2,7 @@ a2_storehouse_index:
     path:            /
     defaults:
         _controller: A2StorhouseBundle:Storehouse:index
-    methods:         GET
+    methods:         [GET, POST]
 
 a2_storehouse_show:
     path:            /{id}/show
@@ -32,4 +32,4 @@ a2_storehouse_delete:
         _controller: A2StorhouseBundle:Storehouse:delete
     requirements:
         id:          \d+
-    methods:         DELETE
+    methods:         [GET, POST]
