--- a/src/A2/StorehouseBundle/Resources/config/routing.yml
+++ b/src/A2/StorehouseBundle/Resources/config/routing.yml
@@ -1,13 +1,13 @@
 a2_storehouse_index:
     path:            /
     defaults:
-        _controller: A2StorhouseBundle:Storehouse:index
+        _controller: A2StorehouseBundle:Storehouse:index
     methods:         [GET, POST]
 
 a2_storehouse_show:
     path:            /{id}/show
     defaults:
-        _controller: A2StorhouseBundle:Storehouse:show
+        _controller: A2StorehouseBundle:Storehouse:show
     requirements:
         id:          \d+
     methods:         GET
@@ -15,13 +15,13 @@ a2_storehouse_show:
 a2_storehouse_new:
     path:            /new
     defaults:
-        _controller: A2StorhouseBundle:Storehouse:new
+        _controller: A2StorehouseBundle:Storehouse:new
     methods:         [GET, POST]
 
 a2_storehouse_edit:
     path:            /{id}/edit
     defaults:
-        _controller: A2StorhouseBundle:Storehouse:edit
+        _controller: A2StorehouseBundle:Storehouse:edit
     requirements:
         id:          \d+
     methods:         [GET, POST]
@@ -29,7 +29,7 @@ a2_storehouse_edit:
 a2_storehouse_delete:
     path:            /{id}/delete
     defaults:
-        _controller: A2StorhouseBundle:Storehouse:delete
+        _controller: A2StorehouseBundle:Storehouse:delete
     requirements:
         id:          \d+
     methods:         [GET, POST]
