--- a/src/A2/SupplierBundle/Resources/config/routing.yml
+++ b/src/A2/SupplierBundle/Resources/config/routing.yml
@@ -1,13 +1,13 @@
 a2_supplier_index:
     path:            /
     defaults:
-        _controller: A2SupplierBundle;Supplier:index
+        _controller: A2SupplierBundle:Supplier:index
     methods:         [GET, POST]
 
 a2_upplier_show:
     path:            /{id}/show
     defaults:
-        _controller: A2SupplierBundle;Supplier:show
+        _controller: A2SupplierBundle:Supplier:show
     requirements:
         id:          \d+
     methods:         GET
@@ -15,13 +15,13 @@ a2_upplier_show:
 a2_supplier_new:
     path:            /new
     defaults:
-        _controller: A2SupplierBundle;Supplier:new
+        _controller: A2SupplierBundle:Supplier:new
     methods:         [GET, POST]
 
 a2_supplier_edit:
     path:            /{id}/edit
     defaults:
-        _controller: A2SupplierBundle;Supplier:edit
+        _controller: A2SupplierBundle:Supplier:edit
     requirements:
         id:          \d+
     methods:         [GET, POST]
@@ -29,7 +29,7 @@ a2_supplier_edit:
 a2_supplier_delete:
     path:            /{id}/delete
     defaults:
-        _controller: A2SupplierBundle;Supplier:delete
+        _controller: A2SupplierBundle:Supplier:delete
     requirements:
         id:          \d+
     methods:         [GET, POST]
