Creation de la vue d'affichage des details d'un fournisseur

--- a/src/A2/SupplierBundle/Resources/config/routing.yml
+++ b/src/A2/SupplierBundle/Resources/config/routing.yml
@@ -4,7 +4,7 @@ a2_supplier_index:
         _controller: A2SupplierBundle:Supplier:index
     methods:         [GET, POST]
 
-a2_upplier_show:
+a2_supplier_show:
     path:            /{id}/show
     defaults:
         _controller: A2SupplierBundle:Supplier:show
