Creation de la route vers la methode de vente de voiture

--- a/src/A2/CarBundle/Resources/config/routing.yml
+++ b/src/A2/CarBundle/Resources/config/routing.yml
@@ -33,3 +33,11 @@ a2_car_delete:
     requirements:
         id:          \d+
     methods:         [GET, POST]
+
+a2_car_sold:
+    path:            /{id}/sold
+    defaults:
+        _controller: A2CarBundle:Car:sold
+    requirements:
+        id:          \d+
+    methods:         [GET, POST]
