--- a/src/A2/CustomerBundle/Resources/config/routing.yml
+++ b/src/A2/CustomerBundle/Resources/config/routing.yml
@@ -2,7 +2,7 @@ a2_customer_index:
     path:            /
     defaults:
         _controller: A2CustomerBundle:Customer:index
-    methods:         GET
+    methods:         [GET, POST]
 
 a2_customer_show:
     path:            /{id}/show
@@ -34,4 +34,12 @@ a2_customer_delete:
         _controller: A2CustomerBundle:Customer:delete
     requirements:
         id:          \d+
-    methods:         DELETE
+    methods:         [GET, POST]
+
+a2_customer_exist:
+    path:            /{id}/choice
+    defaults:
+        _controller: A2CustomerBundle:Customer:sale
+    requirements:
+        id:          \d+
+    methods:         [GET, POST]
