--- a/src/A2/SaleBundle/Resources/config/routing.yml
+++ b/src/A2/SaleBundle/Resources/config/routing.yml
@@ -2,7 +2,7 @@ a2_sale_index:
     path:            /
     defaults:
         _controller: A2SaleBundle:Sale:index
-    methods:         GET
+    methods:         [GET, POST]
 
 a2_sale_show:
     path:            /{id}/show
@@ -32,4 +32,4 @@ a2_sale_delete:
         _controller: A2SaleBundle:Sale:delete
     requirements:
         id:          \d+
-    methods:         DELETE
+    methods:         [GET, POST]
