Ajout du prefix a2 sur les route de user

--- a/src/A2/UserBundle/Resources/config/routing.yml
+++ b/src/A2/UserBundle/Resources/config/routing.yml
@@ -1,24 +1,24 @@
-user_index:
+a2_user_index:
     path:     /
     defaults: { _controller: "A2UserBundle:User:index" }
-    methods:  GET
+    methods:  [GET, POST]
 
-user_show:
+a2_user_show:
     path:     /{id}/show
     defaults: { _controller: "A2UserBundle:User:show" }
     methods:  GET
 
-user_new:
+a2_user_new:
     path:     /new
     defaults: { _controller: "A2UserBundle:User:new" }
     methods:  [GET, POST]
 
-user_edit:
+a2_user_edit:
     path:     /{id}/edit
     defaults: { _controller: "A2UserBundle:User:edit" }
     methods:  [GET, POST]
 
-user_delete:
+a2_user_delete:
     path:     /{id}/delete
     defaults: { _controller: "A2UserBundle:User:delete" }
-    methods:  DELETE
+    methods:  [GET, POST]
